<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B1AB6">


    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="248dp"
        android:alpha="10"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icons_list"
        tools:ignore="ImageContrastCheck,VisualLintBounds" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16000003"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/province" />

        <Spinner
            android:id="@+id/spinner_province"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:autofillHints="text"
            android:background="@color/teal_200"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="8dp"
            android:hint="Select Province"
            android:textColor="#000000"
            android:textColorHint="#000000"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/municipality" />

        <Spinner
            android:id="@+id/spinner_municipality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:background="@color/teal_200"
            android:minHeight="48dp"
            android:padding="8dp"
            android:autofillHints="name"
            android:inputType="text"
            android:textColor="#000000"
            android:textColorHint="#000000"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/hospital" />

        <EditText
            android:id="@+id/editTextHospitalName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/enter_hospital"
            android:textColorHint="@color/teal_200"
            android:textColor="#000000"
            android:minHeight="48dp"
            android:padding="8dp"
            android:inputType="text"
            android:autofillHints="text"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/longitude" />

        <EditText
            android:id="@+id/editTextLongitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/enter_longitude"
            android:textColorHint="@color/teal_200"
            android:textColor="#000000"
            android:minHeight="48dp"
            android:padding="8dp"
            android:autofillHints="text"
            android:inputType="text"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/latitude" />

        <EditText
            android:id="@+id/editTextLatitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:hint="@string/enter_latitude"
            android:textColorHint="@color/teal_200"
            android:textColor="#000000"
            android:minHeight="48dp"
            android:padding="8dp"
            android:autofillHints="text"
            android:inputType="text"
            tools:ignore="VisualLintTextFieldSize" />

    </LinearLayout>

    <Button
        android:id="@+id/addButton"
        android:layout_width="116dp"
        android:layout_height="51dp"
        android:background="@drawable/rounded_button"
        android:text="@string/add"
        android:textColor="@color/black"
        app:backgroundTint="#88E3F5"
        app:icon="@drawable/round_add_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.851" />

</androidx.constraintlayout.widget.ConstraintLayout>