<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B1AB6">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/imageFilterView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icons_list" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/imageFilterView7"
        android:layout_width="260dp"
        android:layout_height="305dp"
        android:layout_marginBottom="552dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/navigation_amico" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="343dp"
        android:layout_height="481dp"
        android:background="@drawable/rounded_container"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.849"
        app:layout_constraintWidth_percent="0.3">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10sp"
            android:paddingTop="10sp"
            android:text="@string/welcome_back"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15sp"
            android:textSize="16dp"
            android:text="@string/login_to_your_account"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/emailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25sp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="25sp"
            android:autofillHints="Enter email"
            android:background="#B0FFFFFF"
            android:drawableStart="@android:drawable/sym_action_email"
            android:hint="@string/email2"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25sp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25sp"
            android:autofillHints="Enter password"
            android:background="#B0FFFFFF"
            android:drawableStart="@android:drawable/ic_lock_idle_lock"
            android:hint="@string/password2"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/restPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10sp"
            android:paddingTop="14sp"
            android:paddingEnd="10sp"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textSize="13sp" />

    </LinearLayout>

    <Button
        android:id="@+id/goToLoginActivity"
        android:layout_width="138dp"
        android:layout_height="51dp"
        android:background="@drawable/rounded_button"
        android:text="@string/login"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        app:icon="@drawable/icons8_enter_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.73" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/imageFilterView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83"
        app:srcCompat="@drawable/icons8_google_48" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/imageFilterView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83"
        app:srcCompat="@drawable/icons8_facebook_48" />

    <TextView
        android:id="@+id/goToSignUPActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:textColor="@color/teal_200"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.88" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Have no account?"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.88" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="34dp"
        android:layout_height="28dp"
        android:background="@drawable/toggle_eye"
        android:textOff=""
        android:textOn=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

</androidx.constraintlayout.widget.ConstraintLayout>
