<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B1AB6">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/imageFilterView8"
        android:layout_width="227dp"
        android:layout_height="276dp"
        android:layout_marginBottom="584dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/directions_amico__2_" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="346dp"
        android:layout_height="547dp"
        android:background="@drawable/rounded_container"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.849"
        app:layout_constraintWidth_percent="0.3">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingTop="10sp"
            android:layout_marginBottom="10sp"
            android:text="@string/let_s_get_started"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:layout_marginBottom="8sp"
            android:text="@string/create_an_account"
            android:textAlignment="center"
            />

        <EditText
            android:id="@+id/emailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="25sp"
            android:autofillHints="Enter email"
            android:background="#B0FFFFFF"
            android:drawableStart="@android:drawable/sym_action_email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25sp"
            android:layout_marginTop="20sp"
            android:layout_marginRight="25sp"
            android:autofillHints="Enter full name"
            android:background="#B0FFFFFF"
            android:drawableStart="@drawable/name"
            android:drawableTint="#E6E6E6"
            android:hint="@string/full_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25sp"
            android:layout_marginTop="20sp"
            android:layout_marginRight="25sp"
            android:autofillHints="Enter Password"
            android:background="#B0FFFFFF"
            android:drawableStart="@android:drawable/ic_lock_idle_lock"
            android:hint="Phone_Number"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25sp"
            android:layout_marginTop="20sp"
            android:layout_marginRight="25sp"
            android:background="#B0FFFFFF"
            android:drawableStart="@android:drawable/ic_lock_idle_lock"
            android:hint="@string/password"
            android:inputType="textPassword|textVisiblePassword"
            android:minHeight="48dp"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:textSize="15sp" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/imageFilterView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="142dp"
            app:srcCompat="@drawable/icons_list" />
    </LinearLayout>

    <Button
        android:id="@+id/Create"
        android:layout_width="205dp"
        android:layout_height="52dp"
        android:background="@drawable/rounded_button"
        android:text="@string/create_account"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        app:icon="@drawable/icons8_create_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.77" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Already Have an account?"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.90999997" />

    <TextView
        android:id="@+id/goToLoginActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign up"
        android:textColor="@color/teal_200"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.67"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.90999997" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/GoogleAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.87"
        app:srcCompat="@drawable/icons8_google_48" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/FaceBookAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.87"
        app:srcCompat="@drawable/icons8_facebook_48" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="34dp"
        android:layout_height="28dp"
        android:background="@drawable/toggle_eye"
        android:textOff=""
        android:textOn=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.624" />

</androidx.constraintlayout.widget.ConstraintLayout>
